[tool.poetry]
name = "times"
version = "0.1.0"
description = ""
authors = ["Kyle Horne <me@kyhorne.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
